# memoir

./: .dockerignore  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  LOCALDEV.md  README.md  TODO.md  env.example  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/products/: birthday_tribute.yaml  life_story.yaml  monthly_life_story.yaml
config/prompts/: literary_memoir.yaml  warm_nostalgic.yaml
config/questions/: birthday_memories.yaml  life_story_questions.yaml
config/templates/: autobiography.yaml  celebration_book.yaml
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
infrastructure/: README.md
infrastructure/terraform/: .gitignore  app_runner.tf  cdn.tf  database.tf  main.tf  outputs.tf  setup-env.sh  storage.tf  variables.tf  vpc.tf
memoir/: __init__.py  config.py  config_loader.py  demo_life_story.py  demo_life_story_auto.py  demo_phased.py  demo_projections.py  main.py
memoir/api/: __init__.py  app.py
memoir/auth/: __init__.py  capabilities.py  context.py  examples.py  jwt.py  policies.py  routes.py
memoir/core/: __init__.py  events.py  models.py  projections.py  registry.py  utils.py
memoir/i18n/: __init__.py  document.py  languages.py  translator.py  warmup.py
memoir/integrations/: __init__.py  email.py  oauth.py  sentry.py
memoir/interfaces/: __init__.py  base.py
memoir/products/: __init__.py  config.py  executor.py  loader.py
memoir/resources/: __init__.py  base.py  document_template.py  prompt_template.py  (+1 more)
tests/: __init__.py  test_projections.py
(+28 files in other folders)
